feat: add create game module, update huggingface url